tests/fixtures/validate/lenient/invalid/invalid-bad-comment-1.yini
^ App
title = "My App"

config = { host: "localhost", port: 8080, , secure: true }  // ERROR: invalid object literal, double comma

enabled = ON
